--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -36,6 +36,36 @@ proxies:
       headers:
         host: a.prapt4.ir
   - &id003
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: xray.cheeshon.cyou
+    port: 19344
+    cipher: auto
+    uuid: ac9dd407-d053-4c67-e44e-31d6a5833ff4
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ac9dd407
+      headers:
+        host: xray.cheeshon.cyou
+  - &id004
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+    type: vmess
+    server: yh1.freeh1.xyz
+    port: 8080
+    cipher: auto
+    uuid: 5818310a-92ee-40cd-8303-0dc1396aadda
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 5818310a-92ee-40cd-8303-0dc1396aadda-vm
+      headers:
+        host: bibliographic-sword-sequence-advertisers.trycloudflare.com
+  - &id005
     name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
     type: vmess
     server: 94.140.0.110
@@ -50,8 +80,38 @@ proxies:
       path: /
       headers:
         host: food.zhaal.ir
-  - &id004
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
+  - &id006
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: fbi.gov
+    port: 8080
+    cipher: auto
+    uuid: d137d31c-5e9d-4cb2-8f7b-b171fc63e2aa
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: d137d31c-5e9d-4cb2-8f7b-b171fc63e2aa-vm
+      headers:
+        host: larger-marketing-amounts-skin.trycloudflare.com
+  - &id007
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_1
+    type: vmess
+    server: 23.227.39.45
+    port: 8080
+    cipher: auto
+    uuid: 52899235-7faa-4f6f-b463-972cd7cfce04
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 52899235-7faa-4f6f-b463-972cd7cfce04-vm
+      headers:
+        host: widescreen-instruction-breakdown-postage.trycloudflare.com
+  - &id008
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_2
     type: trojan
     server: 23.227.38.11
     port: 443
@@ -62,23 +122,8 @@ proxies:
     network: ws
     ws-opts:
       path: /argox-tr
-  - &id005
+  - &id009
     name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
-    type: vmess
-    server: 172.67.130.140
-    port: 2082
-    cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s1c.v2.v001sss.xyz
-  - &id006
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
     type: vmess
     server: s1c.v2.v001sss.xyz
     port: 2082
@@ -92,18 +137,130 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
-  - &id007
-    name: 🇮🇪_IE_爱尔兰
+  - &id010
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: cfcdn1.sanfencdn9.com
+    port: 8880
+    cipher: auto
+    uuid: bdede9d3-68c4-4bb1-8ad1-9a8eb07ff76f
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /video/bYdJ7Vc2We
+      headers:
+        host: us6gzxQRrE4.fzbqfrse.xyz
+  - &id011
+    name: 🇺🇸_US_美国_4
     type: trojan
-    server: 52.48.93.169
+    server: us-1.xxom.top
+    port: 543
+    udp: true
+    password: 36046875-393f-45ad-b9fc-de924680bf0b
+    skip-cert-verify: true
+    network: tcp
+  - &id012
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_3
+    type: vmess
+    server: 23.227.39.23
+    port: 8080
+    cipher: auto
+    uuid: e380bde6-f120-4b80-bdae-ea68b1b64504
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: e380bde6-f120-4b80-bdae-ea68b1b64504-vm
+      headers:
+        host: configured-creek-relating-theater.trycloudflare.com
+  - &id013
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_4
+    type: vmess
+    server: 23.227.38.11
+    port: 8080
+    cipher: auto
+    uuid: e380bde6-f120-4b80-bdae-ea68b1b64504
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: e380bde6-f120-4b80-bdae-ea68b1b64504-vm
+      headers:
+        host: configured-creek-relating-theater.trycloudflare.com
+  - &id014
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 162.159.130.208
+    port: 8080
+    cipher: auto
+    uuid: 52899235-7faa-4f6f-b463-972cd7cfce04
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 52899235-7faa-4f6f-b463-972cd7cfce04-vm
+      headers:
+        host: widescreen-instruction-breakdown-postage.trycloudflare.com
+  - &id015
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+    type: vmess
+    server: 104.16.149.244
+    port: 8080
+    cipher: auto
+    uuid: d137d31c-5e9d-4cb2-8f7b-b171fc63e2aa
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: d137d31c-5e9d-4cb2-8f7b-b171fc63e2aa-vm
+      headers:
+        host: larger-marketing-amounts-skin.trycloudflare.com
+  - &id016
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 192.9.134.82
+    port: 19344
+    cipher: auto
+    uuid: ac9dd407-d053-4c67-e44e-31d6a5833ff4
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ac9dd407
+      headers:
+        host: xray.cheeshon.cyou
+  - &id017
+    name: 🇬🇧_GB_英国
+    type: trojan
+    server: 18.169.148.45
     port: 22222
     udp: true
     password: telegram-id-privatevpns
     sni: trojan.miwan.co.uk
     skip-cert-verify: true
     network: tcp
-    alpn:
-      - http/1.1
+  - &id018
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
+    type: vmess
+    server: 172.67.130.140
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
 proxy-groups:
   - name: PROXY
     type: select
@@ -137,6 +294,17 @@ proxy-groups:
       - *id005
       - *id006
       - *id007
+      - *id008
+      - *id009
+      - *id010
+      - *id011
+      - *id012
+      - *id013
+      - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -149,6 +317,17 @@ proxy-groups:
       - *id005
       - *id006
       - *id007
+      - *id008
+      - *id009
+      - *id010
+      - *id011
+      - *id012
+      - *id013
+      - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
   - name: SELECT
     type: select
     proxies:
@@ -159,6 +338,17 @@ proxy-groups:
       - *id005
       - *id006
       - *id007
+      - *id008
+      - *id009
+      - *id010
+      - *id011
+      - *id012
+      - *id013
+      - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
