--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,7 +6,7 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
     type: vmess
     server: 104.21.69.44
     port: 80
@@ -36,36 +36,76 @@ proxies:
       headers:
         host: a.prapt4.ir
   - &id003
-    name: 🇺🇸_US_美国_1
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
     type: vmess
-    server: xray.cheeshon.cyou
-    port: 19344
-    cipher: auto
-    uuid: ac9dd407-d053-4c67-e44e-31d6a5833ff4
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /ac9dd407
-      headers:
-        host: xray.cheeshon.cyou
-  - &id004
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-    type: vmess
-    server: yh1.freeh1.xyz
+    server: de-01.cloudlion.me
     port: 8080
     cipher: auto
-    uuid: 5818310a-92ee-40cd-8303-0dc1396aadda
+    uuid: 70666776-4e9f-4350-b3f0-afaff6a70db0
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: 5818310a-92ee-40cd-8303-0dc1396aadda-vm
+      path: /
       headers:
-        host: bibliographic-sword-sequence-advertisers.trycloudflare.com
+        host: de-01.cloudlion.me
+  - &id004
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: cfcdn1.sanfencdn9.com
+    port: 8880
+    cipher: auto
+    uuid: bdede9d3-68c4-4bb1-8ad1-9a8eb07ff76f
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /video/bYdJ7Vc2We
+      headers:
+        host: us6gzxQRrE4.fzbqfrse.xyz
   - &id005
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+    type: vmess
+    server: fbi.gov
+    port: 8080
+    cipher: auto
+    uuid: 693da022-8e1f-4dab-b3ac-556321989f17
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 693da022-8e1f-4dab-b3ac-556321989f17-vm
+      headers:
+        host: nest-emily-healing-h.trycloudflare.com
+  - &id006
+    name: 🇬🇧_GB_英国
+    type: trojan
+    server: 13.43.246.34
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trojan.miwan.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id007
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 104.18.36.174
+    port: 8880
+    cipher: auto
+    uuid: 17c82b45-dff0-47bb-9e0c-07ef07f67005
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /video/bYdJ7Vc2We
+      headers:
+        host: us6gzxQRrE4.fzbqfrse.xyz
+  - &id008
     name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
     type: vmess
     server: 94.140.0.110
@@ -80,38 +120,8 @@ proxies:
       path: /
       headers:
         host: food.zhaal.ir
-  - &id006
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: fbi.gov
-    port: 8080
-    cipher: auto
-    uuid: d137d31c-5e9d-4cb2-8f7b-b171fc63e2aa
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: d137d31c-5e9d-4cb2-8f7b-b171fc63e2aa-vm
-      headers:
-        host: larger-marketing-amounts-skin.trycloudflare.com
-  - &id007
+  - &id009
     name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_1
-    type: vmess
-    server: 23.227.39.45
-    port: 8080
-    cipher: auto
-    uuid: 52899235-7faa-4f6f-b463-972cd7cfce04
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 52899235-7faa-4f6f-b463-972cd7cfce04-vm
-      headers:
-        host: widescreen-instruction-breakdown-postage.trycloudflare.com
-  - &id008
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_2
     type: trojan
     server: 23.227.38.11
     port: 443
@@ -122,13 +132,13 @@ proxies:
     network: ws
     ws-opts:
       path: /argox-tr
-  - &id009
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
+  - &id010
+    name: 🇺🇸_US_美国_3
     type: vmess
-    server: s1c.v2.v001sss.xyz
-    port: 2082
+    server: 104.21.226.251
+    port: 80
     cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -136,118 +146,70 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: s1c.v2.v001sss.xyz
-  - &id010
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: cfcdn1.sanfencdn9.com
-    port: 8880
-    cipher: auto
-    uuid: bdede9d3-68c4-4bb1-8ad1-9a8eb07ff76f
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /video/bYdJ7Vc2We
-      headers:
-        host: us6gzxQRrE4.fzbqfrse.xyz
+        host: a.prapt5.ir
   - &id011
-    name: 🇺🇸_US_美国_4
-    type: trojan
-    server: us-1.xxom.top
-    port: 543
-    udp: true
-    password: 36046875-393f-45ad-b9fc-de924680bf0b
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+    type: vmess
+    server: yh1.freeh1.xyz
+    port: 8080
+    cipher: auto
+    uuid: fbacc445-fe1c-4122-a2dd-c28c733ea043
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: fbacc445-fe1c-4122-a2dd-c28c733ea043-vm
+      headers:
+        host: larger-marketing-amounts-skin.trycloudflare.com
   - &id012
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_3
+    name: 🇺🇸_US_美国_4
     type: vmess
-    server: 23.227.39.23
+    server: yh2.dtku41.xyz
     port: 8080
     cipher: auto
-    uuid: e380bde6-f120-4b80-bdae-ea68b1b64504
+    uuid: a984d860-a48a-4b1f-b6d4-74f7365b63e5
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: e380bde6-f120-4b80-bdae-ea68b1b64504-vm
+      path: a984d860-a48a-4b1f-b6d4-74f7365b63e5-vm
       headers:
-        host: configured-creek-relating-theater.trycloudflare.com
+        host: widescreen-instruction-breakdown-postage.trycloudflare.com
   - &id013
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_4
-    type: vmess
-    server: 23.227.38.11
-    port: 8080
-    cipher: auto
-    uuid: e380bde6-f120-4b80-bdae-ea68b1b64504
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: e380bde6-f120-4b80-bdae-ea68b1b64504-vm
-      headers:
-        host: configured-creek-relating-theater.trycloudflare.com
-  - &id014
     name: 🇺🇸_US_美国_5
     type: vmess
     server: 162.159.130.208
     port: 8080
     cipher: auto
-    uuid: 52899235-7faa-4f6f-b463-972cd7cfce04
+    uuid: a984d860-a48a-4b1f-b6d4-74f7365b63e5
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: 52899235-7faa-4f6f-b463-972cd7cfce04-vm
+      path: a984d860-a48a-4b1f-b6d4-74f7365b63e5-vm
       headers:
         host: widescreen-instruction-breakdown-postage.trycloudflare.com
+  - &id014
+    name: 🇪🇸_ES_西班牙->🇭🇰_HK_香港
+    type: vmess
+    server: 185.214.103.156
+    port: 34601
+    cipher: auto
+    uuid: 75a68200-4d76-3eb6-b510-39b8e63b7823
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: cache-hk-2.cn-db.top
+    network: ws
+    ws-opts:
+      path: /db00
+      headers:
+        host: cache-hk-2.cn-db.top
   - &id015
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-    type: vmess
-    server: 104.16.149.244
-    port: 8080
-    cipher: auto
-    uuid: d137d31c-5e9d-4cb2-8f7b-b171fc63e2aa
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: d137d31c-5e9d-4cb2-8f7b-b171fc63e2aa-vm
-      headers:
-        host: larger-marketing-amounts-skin.trycloudflare.com
-  - &id016
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 192.9.134.82
-    port: 19344
-    cipher: auto
-    uuid: ac9dd407-d053-4c67-e44e-31d6a5833ff4
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /ac9dd407
-      headers:
-        host: xray.cheeshon.cyou
-  - &id017
-    name: 🇬🇧_GB_英国
-    type: trojan
-    server: 18.169.148.45
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trojan.miwan.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id018
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
     type: vmess
     server: 172.67.130.140
     port: 2082
@@ -261,6 +223,95 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
+  - &id016
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: cold-dawn-9246.fly.dev
+    port: 443
+    cipher: auto
+    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: cold-dawn-9246.fly.dev
+    network: ws
+    ws-opts:
+      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
+  - &id017
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_2
+    type: vmess
+    server: 23.227.38.22
+    port: 8080
+    cipher: auto
+    uuid: c575b66a-2901-4e05-a4b2-453e196f9bb5
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: c575b66a-2901-4e05-a4b2-453e196f9bb5-vm
+      headers:
+        host: per-essex-patterns-bowling.trycloudflare.com
+  - &id018
+    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗
+    type: vmess
+    server: you2.fastiran.info
+    port: 80
+    cipher: chacha20-poly1305
+    uuid: 9c9d54e5-b213-4e5d-a6fe-4cf40b2b2baf
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /R5ymmhAFAg5fXQOaPOZVq
+      headers:
+        host: y2.fastiran.info
+  - &id019
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: 165.1.79.252
+    port: 19344
+    cipher: auto
+    uuid: ac9dd407-d053-4c67-e44e-31d6a5833ff4
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ac9dd407
+      headers:
+        host: soe.cheeshon.cyou
+  - &id020
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
+    type: vmess
+    server: s1c.v2.v001sss.xyz
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id021
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 104.20.30.205
+    port: 80
+    cipher: auto
+    uuid: 1cfaad16-d2ba-4c49-af07-d7b9f11f43d0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /xn--mes53ddysu0o3gl
+      headers:
+        host: newus1.xn--mes53ddysu0o3gl.top
 proxy-groups:
   - name: PROXY
     type: select
@@ -305,6 +356,9 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
+      - *id019
+      - *id020
+      - *id021
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -328,6 +382,9 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
+      - *id019
+      - *id020
+      - *id021
   - name: SELECT
     type: select
     proxies:
@@ -349,6 +406,9 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
+      - *id019
+      - *id020
+      - *id021
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
