--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,81 +6,66 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
-    type: vmess
-    server: 104.21.69.44
-    port: 80
-    cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: a.prapt4.ir
-  - &id002
-    name: 🇳🇱_NL_荷兰
-    type: vmess
-    server: 188.114.96.113
-    port: 80
-    cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: a.prapt4.ir
-  - &id003
     name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_1
     type: vmess
-    server: 23.227.38.23
+    server: 23.227.38.11
     port: 8080
     cipher: auto
-    uuid: 80b48bc6-1faa-41f5-91f8-0bce015a8bea
+    uuid: 4a5ae806-ee72-473a-83b2-531808f454d5
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: 80b48bc6-1faa-41f5-91f8-0bce015a8bea-vm
+      path: 4a5ae806-ee72-473a-83b2-531808f454d5-vm
       headers:
-        host: uh-lawyers-instruments-kernel.trycloudflare.com
-  - &id004
+        host: championship-bidding-oxygen-brochure.trycloudflare.com
+  - &id002
     name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_2
     type: vmess
-    server: 23.227.39.24
+    server: 23.227.38.44
     port: 8080
     cipher: auto
-    uuid: e62899a7-438c-40ef-96d6-259cb26d6fdd
+    uuid: 33eb512b-8f3a-459b-b823-3cccb6e82049
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: e62899a7-438c-40ef-96d6-259cb26d6fdd-vm
+      path: 33eb512b-8f3a-459b-b823-3cccb6e82049-vm
+      headers:
+        host: widescreen-instruction-breakdown-postage.trycloudflare.com
+  - &id003
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_3
+    type: vmess
+    server: 23.227.38.22
+    port: 8080
+    cipher: auto
+    uuid: e9d23b60-6e44-45a2-b24f-c8521c04c310
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: e9d23b60-6e44-45a2-b24f-c8521c04c310-vm
       headers:
         host: per-essex-patterns-bowling.trycloudflare.com
-  - &id005
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+  - &id004
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_4
     type: vmess
-    server: yh2.freeh1.xyz
+    server: 23.227.39.12
     port: 8080
     cipher: auto
-    uuid: bdce8656-2802-4470-8946-ef3cf5244aa6
+    uuid: 1a855748-ec07-408a-a3a2-7e1099a30616
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: bdce8656-2802-4470-8946-ef3cf5244aa6-vm
+      path: 1a855748-ec07-408a-a3a2-7e1099a30616-vm
       headers:
-        host: pcs-referenced-camera-concerns.trycloudflare.com
-  - &id006
+        host: uh-lawyers-instruments-kernel.trycloudflare.com
+  - &id005
     name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
     type: vmess
     server: 94.140.0.110
@@ -95,8 +80,35 @@ proxies:
       path: /
       headers:
         host: food.zhaal.ir
+  - &id006
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_5
+    type: trojan
+    server: 23.227.38.11
+    port: 443
+    udp: true
+    password: b17fa17d-13a0-4e8a-a398-8e549ea8b208
+    sni: syndication-statutes-wanted-logo.trycloudflare.com
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /argox-tr
   - &id007
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
+    type: vmess
+    server: fbi.gov
+    port: 8080
+    cipher: auto
+    uuid: b1e5c55d-e59b-42c4-aeb9-393e18525cca
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: b1e5c55d-e59b-42c4-aeb9-393e18525cca-vm
+      headers:
+        host: nest-emily-healing-h.trycloudflare.com
+  - &id008
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国
     type: vmess
     server: 172.67.130.140
     port: 2082
@@ -110,8 +122,8 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
-  - &id008
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
+  - &id009
+    name: 🇺🇸_US_美国_1
     type: vmess
     server: s1c.v2.v001sss.xyz
     port: 2082
@@ -125,20 +137,8 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
-  - &id009
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_3
-    type: trojan
-    server: 23.227.38.11
-    port: 443
-    udp: true
-    password: b17fa17d-13a0-4e8a-a398-8e549ea8b208
-    sni: syndication-statutes-wanted-logo.trycloudflare.com
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /argox-tr
   - &id010
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
     type: vmess
     server: 172.67.169.158
     port: 8080
@@ -153,50 +153,20 @@ proxies:
       headers:
         host: fr-01.cloudlion.me
   - &id011
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+    name: 🇺🇸_US_美国_2
     type: vmess
-    server: fbi.gov
+    server: 162.159.130.208
     port: 8080
     cipher: auto
-    uuid: 693da022-8e1f-4dab-b3ac-556321989f17
+    uuid: 33eb512b-8f3a-459b-b823-3cccb6e82049
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: 693da022-8e1f-4dab-b3ac-556321989f17-vm
+      path: 33eb512b-8f3a-459b-b823-3cccb6e82049-vm
       headers:
-        host: nest-emily-healing-h.trycloudflare.com
-  - &id012
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
-    type: vmess
-    server: yh1.freeh1.xyz
-    port: 8080
-    cipher: auto
-    uuid: fbacc445-fe1c-4122-a2dd-c28c733ea043
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: fbacc445-fe1c-4122-a2dd-c28c733ea043-vm
-      headers:
-        host: larger-marketing-amounts-skin.trycloudflare.com
-  - &id013
-    name: 🇺🇸_US_美国
-    type: vmess
-    server: yh2.dtku41.xyz
-    port: 8080
-    cipher: auto
-    uuid: 80b48bc6-1faa-41f5-91f8-0bce015a8bea
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 80b48bc6-1faa-41f5-91f8-0bce015a8bea-vm
-      headers:
-        host: uh-lawyers-instruments-kernel.trycloudflare.com
+        host: widescreen-instruction-breakdown-postage.trycloudflare.com
 proxy-groups:
   - name: PROXY
     type: select
@@ -234,8 +204,6 @@ proxy-groups:
       - *id009
       - *id010
       - *id011
-      - *id012
-      - *id013
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -252,8 +220,6 @@ proxy-groups:
       - *id009
       - *id010
       - *id011
-      - *id012
-      - *id013
   - name: SELECT
     type: select
     proxies:
@@ -268,8 +234,6 @@ proxy-groups:
       - *id009
       - *id010
       - *id011
-      - *id012
-      - *id013
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
