--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,6 +6,74 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国
+    type: vmess
+    server: 50003.baidu-cdn.top
+    port: 50003
+    cipher: auto
+    uuid: e80442e2-4577-4b33-8d9b-798d816974bd
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id002
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
+    type: trojan
+    server: 172.67.204.84
+    port: 443
+    udp: true
+    password: qj1Dz1CJmFQRhWr1SP80aA
+    sni: cdn-21.gsmxreality.com
+    skip-cert-verify: true
+    network: grpc
+    grpc-opts:
+      grpc-service-name: 443trojan
+  - &id003
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+    type: vmess
+    server: yh3.freeh1.xyz
+    port: 8080
+    cipher: auto
+    uuid: 028c8131-9e3e-4836-94ac-ea7f24d4d05a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 028c8131-9e3e-4836-94ac-ea7f24d4d05a-vm
+      headers:
+        host: nest-emily-healing-h.trycloudflare.com
+  - &id004
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: yh1.freeh1.xyz
+    port: 8080
+    cipher: auto
+    uuid: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a-vm
+      headers:
+        host: larger-marketing-amounts-skin.trycloudflare.com
+  - &id005
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+    type: vmess
+    server: yh2.freeh1.xyz
+    port: 8080
+    cipher: auto
+    uuid: 028c8131-9e3e-4836-94ac-ea7f24d4d05a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 028c8131-9e3e-4836-94ac-ea7f24d4d05a-vm
+      headers:
+        host: nest-emily-healing-h.trycloudflare.com
+  - &id006
     name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
     type: vmess
     server: 94.140.0.110
@@ -20,37 +88,7 @@ proxies:
       path: /
       headers:
         host: food.zhaal.ir
-  - &id002
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-    type: vmess
-    server: yh3.freeh1.xyz
-    port: 8080
-    cipher: auto
-    uuid: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a-vm
-      headers:
-        host: larger-marketing-amounts-skin.trycloudflare.com
-  - &id003
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-    type: vmess
-    server: yh1.freeh1.xyz
-    port: 8080
-    cipher: auto
-    uuid: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a-vm
-      headers:
-        host: larger-marketing-amounts-skin.trycloudflare.com
-  - &id004
+  - &id007
     name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
     type: vmess
     server: fbi.gov
@@ -65,55 +103,10 @@ proxies:
       path: ef8c954e-014f-4b36-8273-9b5086afab34-vm
       headers:
         host: bibliographic-sword-sequence-advertisers.trycloudflare.com
-  - &id005
-    name: 🇨🇦_CA_加拿大
-    type: vmess
-    server: 23.227.38.23
-    port: 8080
-    cipher: auto
-    uuid: 34c0bb5e-c120-432d-9c58-bd7d82c7397b
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 34c0bb5e-c120-432d-9c58-bd7d82c7397b-vm
-      headers:
-        host: uh-lawyers-instruments-kernel.trycloudflare.com
-  - &id006
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 172.67.130.140
-    port: 2082
-    cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s1c.v2.v001sss.xyz
-  - &id007
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_1
-    type: vmess
-    server: 23.227.38.22
-    port: 8080
-    cipher: auto
-    uuid: 9258153a-dc97-4e39-9037-009abfc4fed0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 9258153a-dc97-4e39-9037-009abfc4fed0-vm
-      headers:
-        host: per-essex-patterns-bowling.trycloudflare.com
   - &id008
     name: 🇺🇸_US_美国_2
     type: vmess
-    server: yh1.dtku41.xyz
+    server: yh2.dtku41.xyz
     port: 8080
     cipher: auto
     uuid: 9258153a-dc97-4e39-9037-009abfc4fed0
@@ -128,7 +121,37 @@ proxies:
   - &id009
     name: 🇺🇸_US_美国_3
     type: vmess
-    server: yh2.dtku41.xyz
+    server: 172.67.130.140
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id010
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 162.159.130.208
+    port: 8080
+    cipher: auto
+    uuid: 55021a7c-bd6c-418e-be95-ceac8ba27b45
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 55021a7c-bd6c-418e-be95-ceac8ba27b45-vm
+      headers:
+        host: widescreen-instruction-breakdown-postage.trycloudflare.com
+  - &id011
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_1
+    type: vmess
+    server: 23.227.38.22
     port: 8080
     cipher: auto
     uuid: 9258153a-dc97-4e39-9037-009abfc4fed0
@@ -140,22 +163,37 @@ proxies:
       path: 9258153a-dc97-4e39-9037-009abfc4fed0-vm
       headers:
         host: per-essex-patterns-bowling.trycloudflare.com
-  - &id010
-    name: 🇺🇸_US_美国_4
+  - &id012
+    name: 🇺🇸_US_美国_5
     type: vmess
-    server: yh2.freeh1.xyz
+    server: yh1.dtku41.xyz
     port: 8080
     cipher: auto
-    uuid: d9c5ec6a-a8d8-4732-8447-56fbd2f93e96
+    uuid: 9258153a-dc97-4e39-9037-009abfc4fed0
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: d9c5ec6a-a8d8-4732-8447-56fbd2f93e96-vm
+      path: 9258153a-dc97-4e39-9037-009abfc4fed0-vm
       headers:
-        host: pcs-referenced-camera-concerns.trycloudflare.com
-  - &id011
+        host: per-essex-patterns-bowling.trycloudflare.com
+  - &id013
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_2
+    type: vmess
+    server: 23.227.38.23
+    port: 8080
+    cipher: auto
+    uuid: 34c0bb5e-c120-432d-9c58-bd7d82c7397b
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 34c0bb5e-c120-432d-9c58-bd7d82c7397b-vm
+      headers:
+        host: uh-lawyers-instruments-kernel.trycloudflare.com
+  - &id014
     name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
     type: vmess
     server: 162.159.1.33
@@ -170,23 +208,8 @@ proxies:
       path: d9c5ec6a-a8d8-4732-8447-56fbd2f93e96-vm
       headers:
         host: pcs-referenced-camera-concerns.trycloudflare.com
-  - &id012
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 162.159.130.208
-    port: 8080
-    cipher: auto
-    uuid: 55021a7c-bd6c-418e-be95-ceac8ba27b45
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 55021a7c-bd6c-418e-be95-ceac8ba27b45-vm
-      headers:
-        host: widescreen-instruction-breakdown-postage.trycloudflare.com
-  - &id013
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_2
+  - &id015
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_3
     type: trojan
     server: 23.227.38.11
     port: 443
@@ -197,25 +220,28 @@ proxies:
     network: ws
     ws-opts:
       path: /argox-tr
-  - &id014
-    name: 🇮🇪_IE_爱尔兰
-    type: trojan
-    server: 99.81.225.4
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trojan.miwan.co.uk
-    skip-cert-verify: true
-    network: tcp
-    alpn:
-      - http/1.1
-  - &id015
+  - &id016
     name: 🇺🇸_US_美国_6
     type: vmess
-    server: cloudflare.cfgo.cc
-    port: 80
+    server: russia.com
+    port: 8880
     cipher: auto
-    uuid: 22a13aa2-4854-44cb-e090-ec71ab84b1ff
+    uuid: 6658a3a6-225a-4d33-a5d2-82cfde565b4e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v03.ssrsub.com
+  - &id017
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国
+    type: vmess
+    server: s1c.v2.v001sss.xyz
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -223,11 +249,41 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: wap.hostmjj.com
-  - &id016
+        host: s1c.v2.v001sss.xyz
+  - &id018
     name: 🇺🇸_US_美国_7
     type: vmess
-    server: 104.21.54.252
+    server: russia.com
+    port: 2095
+    cipher: auto
+    uuid: 6658a3a6-225a-4d33-a5d2-82cfde565b4e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v03.ssrsub.com
+  - &id019
+    name: 🇺🇸_US_美国->🇿🇦_ZA_南非
+    type: vmess
+    server: yhnsb3.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: yhnsb3.shabijichang.com
+  - &id020
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: www.velvetmountain.shop
     port: 8080
     cipher: auto
     uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
@@ -239,37 +295,7 @@ proxies:
       path: /
       headers:
         host: www.velvetmountain.shop
-  - &id017
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 162.159.134.23
-    port: 8080
-    cipher: auto
-    uuid: 9b196b50-37f2-4f4b-b175-06273adc6207
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 9b196b50-37f2-4f4b-b175-06273adc6207-vm
-      headers:
-        host: championship-bidding-oxygen-brochure.trycloudflare.com
-  - &id018
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
-    type: vmess
-    server: de-01.cloudlion.me
-    port: 8080
-    cipher: auto
-    uuid: 70666776-4e9f-4350-b3f0-afaff6a70db0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: de-01.cloudlion.me
-  - &id019
+  - &id021
     name: 🇺🇸_US_美国_9
     type: vmess
     server: 172.67.143.192
@@ -284,21 +310,36 @@ proxies:
       path: /
       headers:
         host: www.velvetmountain.shop
-  - &id020
+  - &id022
     name: 🇺🇸_US_美国_10
     type: vmess
-    server: www.velvetmountain.shop
-    port: 8080
-    cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    server: cdn.yifenjichang.top
+    port: 2086
+    cipher: none
+    uuid: 900ceafc-30b8-4581-a305-31854f563e4f
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: 900ceafc-30b8-4581-a305-31854f563e4f
       headers:
-        host: www.velvetmountain.shop
+        host: context-sing-pennsylvania-photography.trycloudflare.com
+  - &id023
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: 162.159.134.23
+    port: 8080
+    cipher: auto
+    uuid: 9b196b50-37f2-4f4b-b175-06273adc6207
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 9b196b50-37f2-4f4b-b175-06273adc6207-vm
+      headers:
+        host: championship-bidding-oxygen-brochure.trycloudflare.com
 proxy-groups:
   - name: PROXY
     type: select
@@ -345,6 +386,9 @@ proxy-groups:
       - *id018
       - *id019
       - *id020
+      - *id021
+      - *id022
+      - *id023
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -370,6 +414,9 @@ proxy-groups:
       - *id018
       - *id019
       - *id020
+      - *id021
+      - *id022
+      - *id023
   - name: SELECT
     type: select
     proxies:
@@ -393,6 +440,9 @@ proxy-groups:
       - *id018
       - *id019
       - *id020
+      - *id021
+      - *id022
+      - *id023
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
